Added Nuspec file. Changed main project to output a class library. Merged changes proposed by aterreno (https://github.com/aterreno)

--- a/ExchangeRatesAPI/ExchangeRatesAPI.csproj
+++ b/ExchangeRatesAPI/ExchangeRatesAPI.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8F7FF42B-A079-4AB0-8736-EE259CE3EEB2}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ExchangeRatesAPI</RootNamespace>
     <AssemblyName>ExchangeRatesAPI</AssemblyName>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
